# bb-beam

./: .env.template  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
files/92788a62-affd-4bfc-9675-6859f6916d1e/bb-beam.jan-skiba.broker.beam-workshop.de/: .gitignore
pki/: root.crt.pem
scrips/: dev.sh
src/bb-beam/: beam.py  main.py
